# cvpr2026_unobench_challenge_website

./: db.sqlite3  main.py  manage.py  pyproject.toml  run_test.sh
challenge/: evaluate_nlp.py  models.py  tasks.py  urls.py  views.py
challenge/migrations/: 0001_initial.py
challenge/templates/challenge/: challenge_1.html  home.html  leaderboard.html  my_submissions.html  submit.html  submit_results.html
cv_challenge_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: base.html  base_old.html  base_old2.html  base_tailwind.html  sneat_base.html
templates/allauth/layouts/: base.html  entrance.html
