[project]
name = "cv-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "crispy-bootstrap5>=2026.3",
    "cryptography>=46.0.5",
    "django>=6.0.3",
    "django-allauth[socialaccount]>=65.14.3",
    "django-celery-results>=2.6.0",
    "django-crispy-forms>=2.6",
    "editdistance>=0.8.1",
    "kombu",
    "pillow>=12.1.1",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "valkey>=6.1.1",
]
